--- a/lib/code_to_markdeep/resource/markdeep/css/dark.css
+++ b/lib/code_to_markdeep/resource/markdeep/css/dark.css
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css?family=Teko:700');
 
 @media screen {
-body {
+body#md {
   background: #000;
   color: #ccc;
   font-family: Arial, Helvetica, "sans serif";
@@ -108,12 +108,10 @@ a em.asterisk {
         background: -webkit-linear-gradient(#d3a658, #af730c);
         border: none;
     }
-
-/*
+    
     .md table.table th:last-child {
         border-right: 1px solid #845509;
     }
-*/
     
     .md table.table tr:nth-child(even) {
         background-color: #231601;
