--- a/lib/code_to_markdeep/resource/ctmd/css/dark.css
+++ b/lib/code_to_markdeep/resource/ctmd/css/dark.css
@@ -25,21 +25,6 @@ body {
   border-color: #111;
 }
 
-.md .ox-keyword {
-    color: #bebcff;
-    font-style: italic;
-}
-.md .ox-lisp-keyword {
-    color: #bebcff;
-    font-style: italic;
-}
-.md span.ox-author {
-    font-size: 75%;
-    line-height: 75%;
-    font-style: italic;
-    white-space: nowrap;
-}
-
 .md .tilde code, .hljs-built_in { color: #eee; }
 .hljs-name, .hljs-function .hljs-title { color: #ccf; }
 .hljs-keyword { color: #f8c0f8; }
@@ -47,8 +32,13 @@ body {
 .hljs-meta-keyword { color: #cfc; }
 .hljs-params { color: #d3affd; }
 .hljs-title  { color: #cba3f8 !important; }
-.md .hljs-comment {
+.hljs-comment {
     color: #e4a124;
+    font-style: italic;
+    white-space: nowrap;
+}
+.hljs-string {
+    color: #e3ff4e;
     font-style: italic;
     white-space: nowrap;
 }
